--- a/node-express/public/css/styles.css
+++ b/node-express/public/css/styles.css
@@ -12,16 +12,33 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   overflow: hidden;
+  background: #010924;
 }
 
 form.shortener {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  padding: 10px;
   border: 1px solid black;
   border-radius: 5px;
   background: #bad1ff;
+}
+
+form.shortener div.shortener-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 10px;
+}
+
+form.shortener div.shortener-controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
+  padding: 10px;
+  border-top: 1px solid black;
+  background: #89affa;
 }
 
 form.shortener input.shortener-input {
@@ -31,7 +48,6 @@ form.shortener input.shortener-input {
 form.shortener button.shortener-button {
   display: inline-block;
   width: fit-content;
-  margin: auto;
   padding: 3px;
   border: 1px solid black;
   border-radius: 5px;
@@ -41,6 +57,20 @@ form.shortener button.shortener-button {
 
 form.shortener button.shortener-button:hover {
   background: #aefcf8;
+}
+
+form.shortener button.shortener-random {
+  display: inline-block;
+  width: fit-content;
+  padding: 3px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background: #97dbd8;
+  transition: 0.5s all;
+}
+
+form.shortener button.shortener-random:hover {
+  background: #87d6d3;
 }
 
 div.result {
